--- a/resources/skins.vector.clientPreferences/config.json
+++ b/resources/skins.vector.clientPreferences/config.json
@@ -1,6 +1,6 @@
 {
 	"vector-feature-custom-font-size": {
-		"options": [ "disabled", "enabled" ],
+		"options": [ "0", "1", "2", "3" ],
 		"preferenceKey": "vector-font-size"
 	},
 	"vector-feature-limited-width": {
