--- a/bundlesize.config.json
+++ b/bundlesize.config.json
@@ -1,30 +1,42 @@
-[
-	{
-		"resourceModule": "skins.vector.styles.legacy",
-		"maxSize": "8.4 kB"
+{
+	"total": {
+		"vector-2022": {
+			"scripts": "68.1KB",
+			"styles": "15KB"
+		},
+		"vector": {
+			"scripts": "57.3KB",
+			"styles": "8.3KB"
+		}
 	},
-	{
-		"resourceModule": "codex-search-styles",
-		"maxSize": "4.2 kB"
-	},
-	{
-		"resourceModule": "skins.vector.styles",
-		"maxSize": "11.2 kB"
-	},
-	{
-		"resourceModule": "skins.vector.js",
-		"maxSize": "14.3 kB"
-	},
-	{
-		"resourceModule": "skins.vector.legacy.js",
-		"maxSize": "2.5 kB"
-	},
-	{
-		"resourceModule": "skins.vector.search",
-		"maxSize": "3.3 kB"
-	},
-	{
-		"resourceModule": "skins.vector.icons",
-		"maxSize": "1 kB"
-	}
-]
+	"modules": [
+		{
+			"resourceModule": "skins.vector.styles.legacy",
+			"maxSize": "8.4 kB"
+		},
+		{
+			"resourceModule": "codex-search-styles",
+			"maxSize": "4.2 kB"
+		},
+		{
+			"resourceModule": "skins.vector.styles",
+			"maxSize": "11.2 kB"
+		},
+		{
+			"resourceModule": "skins.vector.js",
+			"maxSize": "14.3 kB"
+		},
+		{
+			"resourceModule": "skins.vector.legacy.js",
+			"maxSize": "2.5 kB"
+		},
+		{
+			"resourceModule": "skins.vector.search",
+			"maxSize": "3.3 kB"
+		},
+		{
+			"resourceModule": "skins.vector.icons",
+			"maxSize": "1 kB"
+		}
+	]
+}
