build: Upgrade eslint-config-wikimedia from 0.25.1 to 0.26.0
Bug: T345100
Change-Id: I51fdef33d517ce4f2f50930bc46dddb2f497677c

--- a/resources/.eslintrc.json
+++ b/resources/.eslintrc.json
@@ -37,6 +37,7 @@
 		"mediawiki/no-nodelist-unsupported-methods": "off",
 		"jsdoc/no-undefined-types": "off",
 		"compat/compat": "off",
-		"mediawiki/class-doc": "off"
+		"mediawiki/class-doc": "off",
+		"vue/dot-location": "off"
 	}
 }
