--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 		"lint:styles": "stylelint \"**/*.{less,css}\"",
 		"lint:i18n": "banana-checker --requireLowerCase=0 i18n/",
 		"doc": "echo 'N/A'",
-		"minify-svg": "svgo --config=.svgo.config.js --quiet --recursive --folder resources/",
+		"minify:svg": "svgo --config=.svgo.config.js --quiet --recursive --folder resources/",
 		"pre-commit": "[ \"${PRE_COMMIT:-1}\" -eq 0 ] || npm -s t"
 	},
 	"pre-commit": "pre-commit",
@@ -40,7 +40,7 @@
 		"postcss-less": "6.0.0",
 		"pre-commit": "1.2.2",
 		"stylelint-config-wikimedia": "0.16.1",
-		"svgo": "3.0.2",
+		"svgo": "3.2.0",
 		"ts-jest": "27.1.5",
 		"typescript": "4.9.5",
 		"vue": "3.3.4"
