Replace use of codex-styles in beta feature with CodexModule ResourceLoader
- Add new module 'skins.vector.search.codex.styles' to skin.json
- Added 'skins.vector.search.codex.styles' to bundlesize.config.json
- Replace the old styles module 'codex-search-styles' with the new one 'skins.vector.search.codex.styles' in skin.js

Bug: T353844
Change-Id: If3cbcac64242c403b42811159882741fda132555

--- a/bundlesize.config.json
+++ b/bundlesize.config.json
@@ -19,6 +19,10 @@
 			"maxSize": "4.2 kB"
 		},
 		{
+			"resourceModule": "skins.vector.search.codex.styles",
+			"maxSize": "5.4 kB"
+		},
+		{
 			"resourceModule": "skins.vector.styles",
 			"maxSize": "11.4 kB"
 		},
