Migrate uses of codex-search in Vector to use CodexModule
- Loaded new skins.vector.search.codex.scripts module in skin.json, with only the CdxTypeaheadSearch component with codexScriptOnly flag set to true.
- Included skins.vector.search.codex.scripts in the script loading configuration for Vector22 within skin.json.
- Turned off the "interface-message-box" feature within Vector22's skins.vector.styles configuration in skin.json, as Codex now supplies these styles.
- Fix the style selector to add `.cdx-button` to `.vector-limited-width-toggle` in BottomDock.less since using the codex style
- Substituted "codex-search-styles" with "skins.vector.search.codex.styles" in the existing configuration.
- Ensured the availability of skins.vector.search.codex.scripts module for use, marking it in the list of modules in skin.js.
- Modified App.vue to utilize skins.vector.search.codex.scripts instead of @wikimedia/codex-search.
- Update App.test.js.snap to the latest output form
- Update bundlesize.config.json with newest values

Bug: T356677
Change-Id: I7fc223db01171efe6656792530d4b625be4c8edc

--- a/bundlesize.config.json
+++ b/bundlesize.config.json
@@ -15,12 +15,12 @@
 			"maxSize": "8.6 kB"
 		},
 		{
-			"resourceModule": "codex-search-styles",
-			"maxSize": "4.2 kB"
-		},
-		{
 			"resourceModule": "skins.vector.search.codex.styles",
 			"maxSize": "5.4 kB"
+		},
+		{
+			"resourceModule": "skins.vector.search.codex.scripts",
+			"maxSize": "14.2 kB"
 		},
 		{
 			"resourceModule": "skins.vector.styles",
