VISUAL CHANGE: Use mask-image for all Vector icons
Visual changes are subtle, but impact 43 scenarios. The color
and positioning is slightly modified to match Codex.

Bug: T363920
Change-Id: Ie5c88e0aa243f73f2dc9f310d18fd59b831edc64

--- a/bundlesize.config.json
+++ b/bundlesize.config.json
@@ -40,6 +40,10 @@
 		},
 		{
 			"resourceModule": "skins.vector.icons",
+			"maxSize": "1.3 kB"
+		},
+		{
+			"resourceModule": "skins.vector.icons.js",
 			"maxSize": "0.7 kB"
 		}
 	]
