--- a/bundlesize.config.json
+++ b/bundlesize.config.json
@@ -1,50 +1,42 @@
-{
-	"total": {
-		"vector-2022": {
-			"scripts": "50KB",
-			"styles": "23KB"
-		},
-		"vector": {
-			"scripts": "50KB",
-			"styles": "18KB"
-		}
+[
+	{
+		"resourceModule": "mediawiki.page.ready",
+		"maxSize": "3.2 kB"
 	},
-	"modules": [
-		{
-			"resourceModule": "skins.vector.styles.legacy",
-			"maxSize": "8.9 kB"
-		},
-		{
-			"resourceModule": "skins.vector.search.codex.styles",
-			"maxSize": "6.2 kB"
-		},
-		{
-			"resourceModule": "skins.vector.search.codex.scripts",
-			"maxSize": "15 kB"
-		},
-		{
-			"resourceModule": "skins.vector.styles",
-			"maxSize": "13.0 kB"
-		},
-		{
-			"resourceModule": "skins.vector.js",
-			"maxSize": "17.5 kB"
-		},
-		{
-			"resourceModule": "skins.vector.legacy.js",
-			"maxSize": "2.5 kB"
-		},
-		{
-			"resourceModule": "skins.vector.search",
-			"maxSize": "3.3 kB"
-		},
-		{
-			"resourceModule": "skins.vector.icons",
-			"maxSize": "1.3 kB"
-		},
-		{
-			"resourceModule": "skins.vector.icons.js",
-			"maxSize": "0.7 kB"
-		}
-	]
-}
+	{
+		"resourceModule": "skins.vector.styles.legacy",
+		"maxSize": "8.9 kB"
+	},
+	{
+		"resourceModule": "skins.vector.search.codex.styles",
+		"maxSize": "6.2 kB"
+	},
+	{
+		"resourceModule": "skins.vector.search.codex.scripts",
+		"maxSize": "15 kB"
+	},
+	{
+		"resourceModule": "skins.vector.styles",
+		"maxSize": "13.0 kB"
+	},
+	{
+		"resourceModule": "skins.vector.js",
+		"maxSize": "17.5 kB"
+	},
+	{
+		"resourceModule": "skins.vector.legacy.js",
+		"maxSize": "2.5 kB"
+	},
+	{
+		"resourceModule": "skins.vector.search",
+		"maxSize": "3.3 kB"
+	},
+	{
+		"resourceModule": "skins.vector.icons",
+		"maxSize": "1.3 kB"
+	},
+	{
+		"resourceModule": "skins.vector.icons.js",
+		"maxSize": "0.7 kB"
+	}
+]
