Align Vector link styles with Minerva
To make sure this is code-ified I have added the rule selector-max-specificity
to check specificity and error if we ever attempt to change this and to also
prevent us from writing overly complicated selectors (for now the default is
based on the status quo)
Additional change is required to skinStyle file to accomodate the new rule.

Bug: T373989
Change-Id: I3921d1fb3a098faae8f5a8bdc895783f1b298daa

--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -8,6 +8,13 @@
 		"declaration-property-unit-disallowed-list": null,
 		"no-descending-specificity": null,
 		"selector-class-pattern": null,
-		"selector-max-id": null
-	}
+		"selector-max-id": null,
+		"selector-max-specificity": "1,4,2"
+	},
+	"overrides": [ {
+		"files": [ "resources/skins.vector.styles/links.less" ],
+		"rules": {
+			"selector-max-specificity": "0,0,1"
+		}
+	} ]
 }
