Use `wikimedia/client` instead of `client-es6`
This is currently the same as client-es6 but will automatically
update when we change the default ES version.

Change-Id: I20b38d6621cf30445492c02f58ebe7451ee6f23c

--- a/resources/.eslintrc.json
+++ b/resources/.eslintrc.json
@@ -5,7 +5,7 @@
 	],
 	"extends": [
 		"plugin:no-jquery/all",
-		"wikimedia/client-es6",
+		"wikimedia/client",
 		"wikimedia/jquery",
 		"wikimedia/mediawiki"
 	],
