Declare modules loaded on page as dependencies
Bug: T395698
Change-Id: I40aa077fa0d63cc880be9c7c7561001b7b12b2b5

--- a/bundlesize.config.json
+++ b/bundlesize.config.json
@@ -24,6 +24,10 @@
 		"maxSize": "1.3 kB"
 	},
 	{
+		"resourceModule": "skins.vector.clientPreferences",
+		"maxSizeUncompressed": "13.4 kB"
+	},
+	{
 		"resourceModule": "skins.vector.icons.js",
 		"maxSize": "0.7 kB"
 	}
